syntax = "proto3";
package adfy.io.rpc.media;
option go_package = "adfy.io/rpc/media";

import "project/service.proto";
import "validate/validate.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "google/protobuf/empty.proto";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
    info: {
        title: "Adfy.io Media Service Twirp/JSON API Documentation";
        version: "1.0";
    };
    external_docs: {
        url: "https://github.com/vldmr-k/adfy.io";
        description: "Adfy.io github repository";
    };
    schemes: HTTPS;
};


service MediaService {
    rpc Upload(UploadRequest) returns (UploadResponse);
    rpc Get(IdRequest) returns (GetMediaResponse);
    rpc Delete(IdRequest) returns (google.protobuf.Empty);
}

message UploadRequest {
  bytes body = 1;
}

message UploadResponse {
  Media media = 1;
}

message GetMediaResponse {
  Media media = 1;
}

message IdRequest {
  string id = 1;
}

message Media {
  string id = 1;
  string path = 2;
  string url = 3;
  string mime = 4;
  int32 size = 5;
  int32 width = 6;
  int32 height = 7;
  enum MediaType {
    IMAGE = 0;
    VIDEO = 1;
  }
  MediaType type = 8;
}
